# ELEC3300-Project

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  ELEC3300-Lab3 Debug.launch  ELEC3300-Lab3.ioc  ELEC3300-Project Debug.launch  ELEC3300-Project Release.launch  ELEC3300-Project.ioc
Core/Inc/: input.h  jy60.h  lcd.h  main.h  output.h  state.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  wip_protocol.h
Core/Src/: adc.c  gpio.c  lcd.c  main.c  stm32f1xx_it.c  usart.c  usb_device.c  usbd_desc.c
Core/Startup/: startup_stm32f103vetx.s
Debug/: ELEC3300-Project.elf
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
USB_DEVICE/App/: usb_device.c
gun_host/: Cargo.toml  __main__.py
gun_host/src/: main.rs
gun_host/src/command/: keyboard.rs  mod.rs  mouse.rs
